--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 project(ffmpeg_gui)
 set(CMAKE_CXX_STANDARD 17)
+#set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 
 add_subdirectory(json)
 add_subdirectory(gpu_detect)
