fix crash on on selected file. add xdg library.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "gpu_detect"]
     path = gpu_detect
     url = https://github.com/KnightMurloc/gpu_detect
+[submodule "xdg"]
+    path = xdg
+    url = https://github.com/vosst/xdg
